=========================
Version 1.2 (july 2007)
=========================

 * ADDED: mo:Torrent as medium (bittorrent items)
 * ADDED: mo:ED2K as medium (edonkey items)
 * ADDED: mo:usesScore (Performance --> Score (particular arrangement of a
 work))
 * ADDED: mo:preview_download (Agent or Manifestation to Document
 * ADDED: mo:download, super-property of mo:previewdonwload, mo:paiddownload
 and mo:freedownload
 * ADDED: mo:AudioFile (as a medium)
 * ADDED: two sub-properties of mo:availableAs -- mo:item (full manifestation
 available) and mo:preview (only a part of the manifestation is available)
 * ADDED: wrapper for foaf:maker, foaf:made, foaf:Agent, foaf:Person,
 foaf:Group, foaf:member
 * ADDED: mo:isrc (international standard recording code)
 * ADDED: mo:genre, subproperty of event:hasFactor
 * ADDED: mo:sampled_version, inverse of sampled_version_of
 * ADDED: produced_score (Arrangement --> Score)
 * MODIFIED: mo:usesSound to mo:recording_of (still a owl:sameAs statement between these two for backward compatibility sake)
 * MODIFIED: mo:usedInRecording to mo:recorded_in (same)
 * MODIFIED: mo:producesSignal to mo:produced_signal (same)
 * MODIFIED: mo:producesSound to mo:produced_sound (same)
 * MODIFIED: mo:usesWork to mo:performance_of (same)
 * MODIFIED: mo:productOfComposition to mo:composed_in (same)
 * MODIFIED: mo:usedInPerformance to mo:performed_in (same)
 * MODIFIED: mo:producesWork to mo:produced_work (same)
 * MODIFIED: mo:paiddownload to mo:paid_download (same)
 * MODIFIED: mo:freedownload to mo:free_download (same)
 * MODIFIED: mo:signalTime to mo:time (same)
 * MODIFIED: mo:sampledVersionOf to mo:sampled_version_of (same)
 * MODIFIED: mo:image subproperty of foaf:depiction
 * MODIFIED: changed comments and domain of freedownload and paiddownload
 * MODIFIED: changed comments on mo:MusicalWork
 * MODIFIED: changed comments on availableAs
 * DELETED: mo:creatorOf - use foaf:made instead